--- a/Earthquakes Depth.ipynb
+++ b/Earthquakes Depth.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Earthquakes in New Zeland (Depth distribution)\n",
-    "### Marta Braojos\n",
+    "### Alvaro Correales\n",
     "\n",
     "We have some data from earthquakes in New Zeland, incuding the distinct depth in earth where they originated. We want to explore the distribution of this depths (data from [https://quakesearch.geonet.org.nz/](https://quakesearch.geonet.org.nz/))"
    ]
