Update Permutation Testing with Monte Carlo.ipynb

--- a/Permutation Testing with Monte Carlo.ipynb
+++ b/Permutation Testing with Monte Carlo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Permutation Testing with Shell data (Monte Carlo)\n",
-    "### Marta Braojos\n",
+    "### Alvaro Correales\n",
     " We are going to apply Monte Carlo sampling to a set of permutations, in order to take a smaller subset to perform a permutation test. "
    ]
   },
