Update Random Walk in a lattice.ipynb

--- a/Random Walk in a lattice.ipynb
+++ b/Random Walk in a lattice.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Random Walk in a 3D lattice\n",
-    "## Marta Braojos"
+    "## Alvaro Correales"
    ]
   },
   {
