Update Simulating Random Variables.ipynb

--- a/Simulating Random Variables.ipynb
+++ b/Simulating Random Variables.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 08. Simulating from Some Discrete and Continuous Random Variables\n",
     "\n",
-    "## Marta Braojos"
+    "## Alvaro Correales"
    ]
   },
   {
